# mcmlgpu

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.py  gpumcml.h  gpumcml_io.c  gpumcml_kernel.cu  gpumcml_kernel.h  gpumcml_main.cu  gpumcml_mem.cu  gpumcml_rng.cu  makefile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
examples/: run_simulations.py
mcmlgpu/: __init__.py
resources/: safeprimes_base32.txt  sample.mci
src/: gpumcml.h  gpumcml_io.cpp  gpumcml_kernel.cu  gpumcml_kernel.h  gpumcml_main.cu  gpumcml_main.h  gpumcml_mem.cu  gpumcml_mem.h  gpumcml_rng.cu  gpumcml_rng.h  pybinding.cpp
tqdm/: LICENSE.md  tqdm.h
