[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mcmlgpu"
version = "0.0.5"
description = "Package to create Monte Carlo Light-tissue simulations powered by a GPU."
readme = "README.md"
authors = [
    {name = "Intelligent Medical Systems, German Cancer Research Center"}
]
license = {file = "LICENSE"}
urls = {"repository" = "https://github.com/IMSY-DKFZ/mcmlgpu", "homepage" = "https://github.com/IMSY-DKFZ/mcmlgpu"}
keywords = ["monte carlo", "simulations", "gpu"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[tool.setuptools]
package-dir = {"" = "mcmlgpu"}

# Include the resources directory in the package
[tool.setuptools.package-data]
mcmlgpu = [
    "resources/safeprimes_base32.txt"
]

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 120
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | incubator
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 310
line_length = 120
skip = ["incubator/", "build/"]
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.10"
exclude = ["incubator/", "build/"]
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = false
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.flake8]
[flake8]
max-line-length = 120
extend-ignore = "E203, E701"
